--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
+    <link type="image/x-icon" href="/sun_rays_summer_icon_246580.ico" rel="shortcut icon">
 </head>
 <body>
 <div class="container">
