--- a/index.html
+++ b/index.html
@@ -11,54 +11,54 @@
     <div class="block">
         <h2>Подключение к учебному серверу по SSH</h2>
         <p>На странице с основными настройками сеанса PuTTY, в поле «Host Name» вводим IP-адрес сервера. Оставляем порт 22, который является одним из основных протоколов в сетях TCP/IP. Выбираем тип соединения «SSH». Нажимаем кнопку Open.</p>
-        <img src="/-1.png" alt="-1">
+        <img src="./-1.png" alt="-1">
     </div>
     <div class="block">
         <h2>Вход на сервер по логину и паролю</h2>
         <p>В открывшемся окне PuTTY вводим логин услуги хостинга вида «u1234567». Затем вводим пароль от услуги хостинга и нажимаем Enter. В целях безопасности вводимый пароль не отображается на экране в виде символов. Набирая пароль, на экране не видно ни самого пароля, ни звёздочек.</p>
-        <img src="/0.png" alt="0">
+        <img src="./0.png" alt="0">
     </div>
     <div class="block">
         <h2>ping</h2>
         <p>ping – утилита командной строки, которая нужна для проверки подключения к другому компьютеру на уровне IP. Команда ping ip отправляет серию небольших пакетов данных на указанное устройство, а затем показывает время ответа.</p>
-        <img src="/1.png" alt="1"></div>
+        <img src="./1.png" alt="1"></div>
     <div class="block">
         <h2>nslookup -type=A kubsu.ru</h2>
         <p>nslookup — утилита, которая позволяет через командную строку узнать содержимое DNS.<br>
             А-запись - адресная запись, которая используется для связи домена и IP-адреса сервера. Применяется для привязки домена к хостингу или создания поддоменов.</p>
-        <img src="/2.png" alt="2"></div>
+        <img src="./2.png" alt="2"></div>
     <div class="block">
         <h2>nslookup -type=MX kubsu.ru</h2>
         <p>nslookup — утилита, которая позволяет через командную строку узнать содержимое DNS.<br>
             Mail Exchanger— запись, которая указывает на сервер, который принимает почту для домена.</p>
-        <img src="/3.png" alt=3></div>
+        <img src="./3.png" alt=3></div>
     <div class="block">
         <h2>nslookup -type=A kubsu-dev.ru</h2>
         <p>nslookup — утилита, которая позволяет через командную строку узнать содержимое DNS.<br>
             А-запись - адресная запись, которая используется для связи домена и IP-адреса сервера. Применяется для привязки домена к хостингу или создания поддоменов.</p>
-        <img src="/4.png" alt="4"></div>
+        <img src="./4.png" alt="4"></div>
     <div class="block">
         <h2>nslookup -type=MX kubsu-dev.ru</h2>
         <p>nslookup — утилита, которая позволяет через командную строку узнать содержимое DNS.<br>
             Mail Exchanger— запись, которая указывает на сервер, который принимает почту для домена.</p>
-        <img src="/5.png" alt="5"></div>
+        <img src="./5.png" alt="5"></div>
     <div class="block">
         <h2>whois kubsu.ru</h2>
         <p>whois сервис — сетевой протокол, который позволяет узнать основные данные о доменном имени (кто администратор и регистратор, срок регистрации и т.п.).</p>
-        <img src="/6.png" alt="6"></div>
+        <img src="./6.png" alt="6"></div>
     <div class="block">
         <h2>whois kubsu-dev.ru</h2>
         <p>whois сервис — сетевой протокол, который позволяет узнать основные данные о доменном имени (кто администратор и регистратор, срок регистрации и т.п.).</p>
-        <img src="/7.png" alt="7"></div>
+        <img src="./7.png" alt="7"></div>
     <div class="block">
         <h2>Клонирование репозитория на учебный сервер</h2>
-        <img src="/9.png" alt="9"></div>
+        <img src="./9.png" alt="9"></div>
     <div class="block">
         <h2>Соединение с учебным сервером с логином и паролем по протоколу FTP через FileZilla</h2>
-        <img src="/8.png" alt="8"></div>
+        <img src="./8.png" alt="8"></div>
     <div class="block">
         <h2>Скачивание файлов задания из папки на учебном сервере</h2>
-        <img src="/10.png" alt="7"></div>
+        <img src="./10.png" alt="10"></div>
 </div>
 </body>
 </html>
